<resources>
    <string name="app_name">NotesApp</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="log_in_text">Log in</string>
    <string name="username_text">Username</string>
    <string name="create_account_text">Create account</string>
    <string name="required_error_text">Required</string>
    <string name="unique_error_text">Must be unique</string>
    <string name="wrong_credentials_error_text">Wrong credentials. Please try again.</string>
    <string name="invalid_email_error_text">Invalid email</string>
    <string name="log_out_text">Log out</string>
    <string name="empty_notes_list_text">Here will be your notes. Create a new one by tapping +.</string>
    <string name="notes_text">Notes</string>
    <string name="add_text">Add</string>
    <string name="title_text">Title</string>
    <string name="content_text">Content</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="attach_text">Attach image</string>
    <string name="clear_attachment_text">Clear image</string>
</resources>